# poorser

./: CMakeLists.txt
poorser/: CMakeLists.txt
poorser/poorser/: CMakeLists.txt  poorser.cpp  poorser.hpp  poorser_demo.cpp  poorser_test.cpp
scripts/: get_ids.py  get_prices.py  get_products.py  show.py  sort.py  sort1.py  sort2.py
